Adicionada imagem ao projeto e atualizado index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Olá, mundo!</h1>
     <h4><p>Muito interessante esta ferramenta do git, confesso que fiquei impressionado com tantas funções disponíveis.</p></h4>
+    <img src="images/logo_github.jpg" alt="Logo do GitHub">
 </body>
 </html>
